# todo-server

./: CMakeLists.txt  README.md  docker-compose.yml  dockerfile  dockerfile.test
.github/workflows/: ci.yml
include/: database.hpp  logger.hpp  server.hpp
include/database/: database.hpp
include/handlers/: delete_task_handler.hpp  get_task_handler.hpp  get_tasks_handler.hpp  handler_factory.hpp  post_task_handler.hpp  put_task_handler.hpp  request_handler.hpp
include/server/: server.hpp
include/utils/: http_utils.hpp
src/: CMakeLists.txt  database.cpp  handler_factory.cpp  logger.cpp  main.cpp  server.cpp
src/database/: database.cpp
src/handlers/: delete_task_handler.cpp  get_task_handler.cpp  get_tasks_handler.cpp  post_task_handler.cpp  put_task_handler.cpp
src/server/: server.cpp
src/utils/: http_utils.cpp
tests/: CMakeLists.txt  test_database.cpp  test_server.cpp  test_utils.hpp
